--- a/package.json
+++ b/package.json
@@ -10,15 +10,21 @@
   },
   "dependencies": {
     "better-react-mathjax": "^2.1.0",
+    "chart.js": "^4.4.8",
+    "downloadjs": "^1.4.7",
+    "framer-motion": "^12.6.3",
+    "html-to-image": "^1.11.13",
     "lucide-react": "^0.482.0",
     "next": "15.2.2",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
     "react-use": "^17.6.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/downloadjs": "^1.4.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
