--- a/package.json
+++ b/package.json
@@ -9,18 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
     "better-react-mathjax": "^2.1.0",
     "chart.js": "^4.4.8",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "downloadjs": "^1.4.7",
     "framer-motion": "^12.6.3",
     "html-to-image": "^1.11.13",
+    "lottie-web": "^5.12.2",
     "lucide-react": "^0.482.0",
     "next": "15.2.2",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
-    "react-use": "^17.6.0"
+    "react-draggable": "^4.4.6",
+    "react-lottie-player": "^2.1.0",
+    "react-use": "^17.6.0",
+    "tailwind-merge": "^3.2.0",
+    "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
