--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
+    "@radix-ui/react-slot": "^1.2.0",
     "better-react-mathjax": "^2.1.0",
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "downloadjs": "^1.4.7",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.6.3",
     "html-to-image": "^1.11.13",
     "lottie-web": "^5.12.2",
