--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tabs": "^1.1.11",
     "better-react-mathjax": "^2.1.0",
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
